--- a/config.yml
+++ b/config.yml
@@ -7,6 +7,7 @@ settings:
         database: jpremium
         first-table: non_premium_users
         second-table: premium_users
+        use-SSL: true
     use-proxy: false # Whether to use proxies to connect with Mojang servers. If you have server where is more than 500 players, I recommend turn on this.
     max-ip-accounts: 2 # How many non-premium players can register with this same ip address.
     max-connections: 15 # How many players can join to the server within 30 seconds.
