--- a/config.yml
+++ b/config.yml
@@ -7,13 +7,15 @@ settings:
         database: jpremium
         first-table: non_premium_users
         second-table: premium_users
-        use-SSL: true
+        use-ssl: true
     use-proxy: false # Whether to use proxies to connect with Mojang servers. If you have server where is more than 500 players, I recommend turn on this.
+    secret-key: none # Your server secret key, please enter this same key to config in JPremium config file on the Spigot servers.
     max-ip-accounts: 2 # How many non-premium players can register with this same ip address.
     max-connections: 15 # How many players can join to the server within 30 seconds.
-    fixed-unique-id: true # Whether to use random unique id for player.
+    fixed-unique-id: true # Whether to use random unique id for player. I recommend turn on it.
     default-language: en # Default language from messages section.
     registration-type: SERVER # Whether to allow register non-premium players on the server, website or both sites.
+    disable-auto-login: true # Whether premium player can disable auto login.
     auto-login-premium: true # Whether to auto login new premium players.
     switch-server-timeout: 200 # How many the plugin must wait in order to connect player with another server. Change this value only when author of JPremium ask for it.
     enable-allow-address: false # Whether to check address which player using to connect to the server.
@@ -225,6 +227,7 @@ messages:
                     password: '&a&lAuto Login! &aYou need use password to login!'
                 error:
                     premium: '&c&lYou are not Premium &cYou can not auto login non-premium account!'
+                    disable-auto-login: '&c&lDisabled! &cYou could not to disable auto login!'
                     enter-passwords: '&c&lInvalid arguments! &cEnter password, re-password and try again!'
                     password-too-short: '&c&lInvalid password! &cEnter longer password!'
                     password-too-long: '&c&lInvalid password! &cEnter shorter password!'
